Port to Apache POI 5.1.0